test fix image load on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -35,7 +35,7 @@
 
 /* HEADER-TOP */
 .header-top {
-    background:linear-gradient(rgba(255,255,255,0.01), rgba(255,255,255,0.01)), url('./header-top-bg.png');
+    background:linear-gradient(rgba(255,255,255,0.01), rgba(255,255,255,0.01)), url('./header-top-bg.jpg');
     display:flex;
     padding:0 2rem;
     position: relative;
